# libapg

./: Makefile.am  configure.ac
src/: _apg.c  apg.c  apg.h  convert.c  glyph.c  glyph.h  main.c  owntypes.h  pronpass.c  pronpass.h  restrict.c  restrict.h
src/cast/: cast.h
src/sha/: sha.c
